<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.InAppFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/outerGuideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/outerGuideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/closeIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/icon_close"
        app:layout_constraintBottom_toTopOf="@id/outerGuideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/firstConstraint"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/outerGuideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/outerGuideline1">

        <TextView
            android:id="@+id/mainConstraintTV1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/inapp1"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/mainConstraintTV2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/firstConstraint" />

        <TextView
            android:id="@+id/mainConstraintTV2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/inapp2"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/mainConstraintLinear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mainConstraintTV1" />

        <LinearLayout
            android:id="@+id/mainConstraintLinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mainConstraintTV2">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/icon_lock" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/inapp3"
                android:textColor="@color/white"
                android:textSize="19sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/outerGuideline3"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rectangle_20"
        android:padding="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/outerGuideline2">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/outerGuideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.07" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/outerGuideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.43" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/outerGuideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.80" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/outerGuideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.08" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_point"
            app:layout_constraintTop_toTopOf="@id/lorem2"
            app:layout_constraintBottom_toBottomOf="@id/lorem2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/lorem2"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_point"
            app:layout_constraintTop_toTopOf="@id/lorem3"
            app:layout_constraintBottom_toBottomOf="@id/lorem3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/lorem3"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_point"
            app:layout_constraintTop_toTopOf="@id/lorem1"
            app:layout_constraintBottom_toBottomOf="@id/lorem1"
            app:layout_constraintEnd_toStartOf="@id/lorem1"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/lorem1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lorem ipsum dolor sit amet."
            android:textColor="#F0F0F0"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintTop_toTopOf="@id/outerGuideline4"
            app:layout_constraintBottom_toBottomOf="@id/outerGuideline4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/lorem2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lorem ipsum dolor sit amet."
            android:textColor="#F0F0F0"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintTop_toTopOf="@id/outerGuideline5"
            app:layout_constraintBottom_toBottomOf="@id/outerGuideline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/lorem3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lorem ipsum dolor sit amet."
            android:textColor="#F0F0F0"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintTop_toTopOf="@id/outerGuideline6"
            app:layout_constraintBottom_toBottomOf="@id/outerGuideline6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/lorem11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Lorem ipsum dolor sit amet consectetur. Nec sollicitudin vel arcu convallis."
            android:textColor="#F0F0F0"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintTop_toBottomOf="@id/lorem1"
            app:layout_constraintStart_toStartOf="@id/lorem1"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/lorem12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Lorem ipsum dolor sit amet consectetur. Nec sollicitudin vel arcu convallis."
            android:textColor="#F0F0F0"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintTop_toBottomOf="@id/lorem2"
            app:layout_constraintStart_toStartOf="@id/lorem2"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/lorem13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Lorem ipsum dolor sit amet consectetur. Nec sollicitudin vel arcu convallis."
            android:textColor="#F0F0F0"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintTop_toBottomOf="@id/lorem3"
            app:layout_constraintStart_toStartOf="@id/lorem3"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/outerGuideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.82" />

    <TextView
        android:id="@+id/tryBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_18"
        android:fontFamily="@font/poppins_medium"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="Try It Now"
        android:textColor="#F0F0F0"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/outerGuideline3" />


</androidx.constraintlayout.widget.ConstraintLayout>